--- a/node/executor/Cargo.toml
+++ b/node/executor/Cargo.toml
@@ -13,36 +13,36 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0" }
-node-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
+node-primitives = { version = "2.0.0", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
 node-runtime = { version = "2.0.2", path = "../../runtime" }
-sc-executor = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-sp-core = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-sp-keystore = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-sp-io = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-sp-state-machine = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-sp-trie = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
+sc-executor = { version = "0.10.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-core = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-keystore = { version = "0.10.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-io = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-state-machine = { version = "0.10.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-trie = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
 trie-root = "0.16.0"
-frame-benchmarking = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
+frame-benchmarking = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
 
 [dev-dependencies]
 criterion = "0.3.0"
-frame-support = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-frame-system = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-node-testing = { version = "3.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-pallet-contracts = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-pallet-grandpa = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-pallet-im-online = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-pallet-indices = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-pallet-session = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-pallet-timestamp = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-pallet-transaction-payment = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-pallet-treasury = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-sp-application-crypto = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-sp-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-sp-runtime = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-sp-externalities = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
-substrate-test-client = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch= 'polkadot-v0.9.10' }
+frame-support = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+frame-system = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+node-testing = { version = "3.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+pallet-contracts = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+pallet-grandpa = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+pallet-im-online = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+pallet-indices = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+pallet-session = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+pallet-timestamp = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+pallet-transaction-payment = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+pallet-treasury = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-application-crypto = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-runtime = { version = "4.0.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-externalities = { version = "0.10.0-dev", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+substrate-test-client = { version = "2.0.0", git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
 wat = "1.0"
 futures = "0.3.9"
 
