--- a/pallets/quadratic-funding/Cargo.toml
+++ b/pallets/quadratic-funding/Cargo.toml
@@ -29,12 +29,12 @@ std = [
 serde = { version = "1.0.119", features = ["derive"], optional = true }
 integer-sqrt = { version = '0.1.5', default-features = false }
 codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
-frame-system = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
-frame-support = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
-frame-benchmarking = { default-features = false, optional = true, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
-sp-std = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
-sp-runtime = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
-sp-io = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
-sp-core = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
-pallet-identity = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
+frame-system = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+frame-support = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+frame-benchmarking = { default-features = false, optional = true, version = '4.0.0-dev', git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-std = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-runtime = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-io = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+sp-core = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
+pallet-identity = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/imstar15/substrate.git', branch = 'debug-910' }
 
