--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,7 +13,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  check-build:
+  test-coverage:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
@@ -33,29 +33,41 @@ jobs:
           rustup update nightly
           rustup update stable
           rustup target add wasm32-unknown-unknown --toolchain nightly
+          rustup component add llvm-tools-preview
+          cargo install grcov
+          bash <(curl -s https://codecov.io/bash) -f lcov.info
 
-      - name: Check Build
+      - name: Test coverage
         run: |
-          SKIP_WASM_BUILD=1 cargo check --release
+          export CARGO_INCREMENTAL=0
+          export SKIP_BUILD_WASM=true
+          export BUILD_DUMMY_WASM_BINARY=true
+          export LLVM_PROFILE_FILE="llvmcoveragedata-%p-%m.profraw"
+          export WASM_TARGET_DIRECTORY=/tmp/wasm
+          cargo +nightly build
+          export RUSTFLAGS="-Zinstrument-coverage"
+          rm -r target/{debug,tests}
+          cargo +nightly test --all
+          grcov . --binary-path ./target/debug/ -s . -t lcov --branch --ignore-not-existing --ignore "/*" -o lcov.info
 
-  run-tests:
-      runs-on: ubuntu-20.04
+  # run-tests:
+  #     runs-on: ubuntu-20.04
 
-      steps:
-        - uses: actions/checkout@v2
+  #     steps:
+  #       - uses: actions/checkout@v2
 
-        - name: Set-Up
-          run: sudo apt install -y cmake pkg-config libssl-dev git build-essential clang libclang-dev curl
+  #       - name: Set-Up
+  #         run: sudo apt install -y cmake pkg-config libssl-dev git build-essential clang libclang-dev curl
 
-        - name: Install Rustup
-          run: |
-            curl https://sh.rustup.rs -sSf | sh -s -- -y
-            source ~/.cargo/env
-            rustup default stable
-            rustup update nightly
-            rustup update stable
-            rustup target add wasm32-unknown-unknown --toolchain nightly
+  #       - name: Install Rustup
+  #         run: |
+  #           curl https://sh.rustup.rs -sSf | sh -s -- -y
+  #           source ~/.cargo/env
+  #           rustup default stable
+  #           rustup update nightly
+  #           rustup update stable
+  #           rustup target add wasm32-unknown-unknown --toolchain nightly
         
-        - name: Run Cargo Tests
-          run: |
-            cargo test
+  #       - name: Run Cargo Tests
+  #         run: |
+  #           cargo test
