--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -18,3 +18,9 @@ jobs:
           next_version: "1.0.1"
           filename: "CHANGELOG.md"
 
+      - name: Commit and push CHANGELOG.md
+        uses: EndBug/add-and-commit@v7
+        with:
+          add: CHANGELOG.md
+          message: "chore: Update CHANGELOG.md"
+          branch: main
