--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -3,9 +3,6 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
 
 jobs:
   package:
@@ -23,4 +20,4 @@ jobs:
         with:
           add: CHANGELOG.md
           message: "chore: Update CHANGELOG.md"
-          branch: main
+          branch: mater
