--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           add: CHANGELOG.md
           message: "chore: Update CHANGELOG.md"
-          branch: mater
+          branch: master
