--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -7,14 +7,7 @@ on:
       - closed
 
 jobs:
-  package:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: imstar15/unreleased-changelog-action@v0.0.1
-
-
-jobs:
-  if_merged:
+  generate CHANGELOG.md:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps: 
