--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -7,7 +7,7 @@ on:
       - closed
 
 jobs:
-  generate CHANGELOG.md:
+  generate:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps: 
