--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,6 +27,25 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v20.2
+        with:
+          files: |
+            pallets/**/lib.rs
+
+      - name: List all changed files
+        run: |
+          if steps.changed-files-specific.outputs.any_changed == 'true';
+            then exit 0;
+          fi
+
+      - name: List all changed files
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo "$file was changed"
+          done
+
       # - name: Set-Up
       #   run: sudo apt install -y cmake pkg-config libssl-dev git build-essential clang libclang-dev curl
 
@@ -35,18 +54,7 @@ jobs:
       #     curl https://sh.rustup.rs -sSf | sh -s -- -y
       #     source ~/.cargo/env
 
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v20.2
-        with:
-          files: |
-            **/*.rs
-
-      - name: List all changed files
-        run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-            echo "$file was changed"
-          done
+      
 
       # - name: Build doc
       #   run: |
