--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: List all changed files
         run: |
-          if steps.changed-files-specific.outputs.any_changed == 'true';
-            then exit 0;
+          if steps.changed-files-specific.outputs.any_changed == 'true'; then
+            exit 0;
           fi
 
       - name: List all changed files
