--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -36,9 +36,7 @@ jobs:
 
       - name: List all changed files
         run: |
-          if [${{steps.changed-files-specific.outputs.any_changed}} == 'true']; then
-            exit 0;
-          fi
+          echo ${{ steps.changed-files-specific.outputs.any_changed }}
 
       - name: List all changed files
         run: |
