--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -17,7 +17,7 @@ permissions:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   check:
-    name: Deploy rust docs
+    name: Check change files
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
@@ -48,7 +48,10 @@ jobs:
           done
 
   build:
+    name: Deploy docs
     if: steps.changed-files-specific.outputs.any_changed == 'true'
+    # The type of runner that the job will run on
+    runs-on: ubuntu-20.04
     steps:
       - name: Set-Up
         run: sudo apt install -y cmake pkg-config libssl-dev git build-essential clang libclang-dev curl
