--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -49,9 +49,10 @@ jobs:
 
   build:
     name: Deploy docs
-    if: steps.changed-files-specific.outputs.any_changed == 'true'
+    # if: steps.changed-files-specific.outputs.any_changed == 'true'
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
+
     steps:
       - name: Set-Up
         run: sudo apt install -y cmake pkg-config libssl-dev git build-essential clang libclang-dev curl
