--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -49,6 +49,7 @@ jobs:
 
   build:
     name: Deploy docs
+    needs: check
     # if: steps.changed-files-specific.outputs.any_changed == 'true'
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
