--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -50,7 +50,7 @@ jobs:
   build:
     name: Deploy docs
     needs: check
-    # if: steps.changed-files-specific.outputs.any_changed == 'true'
+    if: check.steps.changed-files-specific.outputs.any_changed == 'true'
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
