--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -42,6 +42,7 @@ jobs:
           fi
 
       - name: List all changed files
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
         run: |
           for file in ${{ steps.changed-files-specific.outputs.all_changed_files }}; do
             echo "$file was changed"
@@ -50,7 +51,7 @@ jobs:
   build:
     name: Deploy docs
     needs: check
-    if: check.steps.changed-files-specific.outputs.any_changed == 'true'
+    # if: check.steps.changed-files-specific.outputs.any_changed == 'true'
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
