--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -49,9 +49,9 @@ jobs:
           done
 
   build:
+    if: 'true' == 'true'
     name: Deploy docs
     needs: check
-    # if: 'true' == 'true'
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
