Test self-hosted runner

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,7 +4,7 @@ name: Check Set-Up, Build, Test
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [ '*' ]
   pull_request:
     branches: [ master ]
 
@@ -35,7 +35,7 @@ jobs:
           SKIP_WASM_BUILD=1 cargo check --release --features all-nodes
 
   test-coverage:
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v2
