--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,3 +5,8 @@ on:
 jobs:
   steps:
     - run: echo "The head of this PR starts with 'releases/'"
+jobs:
+  print222:
+    steps:
+      - name: Print the input tag to STDOUT
+        run: echo HELLO
