--- a/zombienets/turing/moonbase.toml
+++ b/zombienets/turing/moonbase.toml
@@ -20,6 +20,7 @@ chain = "turing-dev"
 [parachains.collator]
 name = "turing-col-1"
 command = "./target/release/oak-collator"
+args = ["-lxcm=trace --state-pruning archive"]
 ws_port = 9946
 rpc_port = 8855
 
